--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-
 matplotlib==3.7.2
-pandas==1.4.4
+numpy==1.25.2
+pandas==2.0.3
 plotly==5.9.0
-prophet==1.1.4
+prophet==1.1.5
 scikit-learn==1.0.2
+scipy
 statsmodels==0.14.0
 streamlit==1.27.1
-xgboost==2.0.0
+streamlit-echarts==0.4.0
+torch==1.13.1
+xgboost==2.0.2
 yfinance==0.2.30
